Fix text overlap on smaller screens

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -508,19 +508,10 @@ a:has(> i), button:has(> i){
         gap: 0.375rem;
 }
 .prose hgroup p{
-        position: absolute;
-        bottom: 0px;
-        left: 0px;
-        margin: 0px;
-        --tw-translate-y: 1.75rem;
-        transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+        margin: 0.25rem;
 }
 .prose hgroup h1, .prose hgroup h2, .prose hgroup h3, .prose hgroup h4, .prose hgroup h5, .prose hgroup h6{
-        margin-top: 0px;
-}
-.prose hgroup{
-        position: relative;
-        margin-bottom: 3rem;
+        margin: 0px;
 }
 .prose section{
         margin-top: 2rem;
@@ -1166,6 +1157,12 @@ details summary{
 .mb-4{
         margin-bottom: 1rem;
 }
+.mb-5{
+        margin-bottom: 1.25rem;
+}
+.mb-3{
+        margin-bottom: 0.75rem;
+}
 .block{
         display: block;
 }
@@ -1348,18 +1345,8 @@ a:hover{
         text-decoration-line: underline;
 }
 .prose hgroup p{
-        position: absolute;
-        bottom: 0px;
-        left: 0px;
-        margin: 0px;
-        --tw-translate-y: 1.75rem;
-        transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
         --tw-text-opacity: 1;
         color: rgb(126 136 154 / var(--tw-text-opacity));
-}
-.prose hgroup{
-        position: relative;
-        margin-bottom: 3rem;
 }
 .prose{
 
